# endfield-resolution-editor

./: .gitignore  AGENTS.md  README.ja.md  README.ko.md  README.md  README.zh.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml  version-check.yml
src/: App.tsx  i18n.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
